--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             <li class="item">
                                 <a href="">Member Stories</a>
                             </li>
-                            <li class="item">
+                            <li class="item">git add .
                                 <a href="">Video</a>
                             </li>
                             <li class="item">
